[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tristan Kuehn <tkuehn@uwo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.3"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.0.4"
Flask-WTF = "^1.1.1"
Flask-Mail = "^0.9.1"
Flask-Bootstrap = "^3.3.7.1"
Flask-Dance = "^7.0.0"
pytz = "^2023.3.post1"
boutiques = "^0.5.25"
GitPython = "^3.1.36"
flaskhmac = "^1.2.1"
Flask-Login = "^0.6.2"
urllib3 = "^2.0.4"
requests = "^2.31.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
python-dateutil = "^2.8.2"
werkzeug = "<3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
